Dette reverter hele Spring Boot 4 oppgraderingen. Sleit med database oppkobling.
Revert "ORG-2699: Oppgradert team-catalog til spring boot 4.0.2 og diverse andre dependency"

This reverts commit f1252a480e79db067fbf1608a52a59f9e97e50e4.

Revert "ORG-2699: Manglet noen pakker for å kjøre lint og stylelint"

This reverts commit 94b4ed226d8f431d060094e77aaec0a421b80738.

Revert "ORG-2699: Manglet noen pakker for å kjøre lint og stylelint"

This reverts commit b2bf866d5cdec118c88a28519f97ef94a092e3b3.

Revert "Kjørte litt stylelint"

This reverts commit 4853d25ca521ad296bbe6051301ad92c27cec7d0.

Revert "ORG-2699: Prøver å øke antall koblinger til db"

This reverts commit 641dc841fccbdc2738be756bc4056c80f1954955.